--- a/ProfileMatch.Sites/Admin/Dashboard.razor
+++ b/ProfileMatch.Sites/Admin/Dashboard.razor
@@ -6,37 +6,7 @@
         <PeopleList />
     </MudTabPanel>
     <MudTabPanel Text="Statistics" Icon="@Icons.Material.Filled.Portrait">
-        <MudGrid>
-            <MudItem xs="12" sm="4" md="3">
-                <MudCard>
-                    <MudCardHeader>
-                        <CardHeaderContent>
-                            <MudText>Card One</MudText>
-                        </CardHeaderContent>
-                    </MudCardHeader>
-                    <MudCardContent>
-                    </MudCardContent>
-                </MudCard>
-            </MudItem>
-            <MudItem xs="12" sm="8" md="9">
-                <MudCard>
-                    <MudCardHeader>
-                        <CardHeaderContent>
-                            <MudText>Card Two</MudText>
-                        </CardHeaderContent>
-                    </MudCardHeader>
-                    <MudCardContent>
-                        <MudGrid>
-                            <MudPaper>
-                                Something here
-                            </MudPaper>
-                        </MudGrid>
-                    </MudCardContent>
-                </MudCard>
-            </MudItem>
-        </MudGrid>
     </MudTabPanel>
-    <MudTabPanel Text="Departments"><DepartmentsList/></MudTabPanel>
-    <MudTabPanel Text="Questions"></MudTabPanel>
+    <MudTabPanel Text="Questions"><QuestionsList/></MudTabPanel>
     <MudTabPanel Text="Categories"></MudTabPanel>
 </MudTabs>
