--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -9,6 +9,7 @@
 @using ProfileMatch
 @using ProfileMatch.Models
 @using ProfileMatch.Models.Enumerations
+@using ProfileMatch.Models.Models
 
 
 @using ProfileMatch.Components
