--- a/ProfileMatch.Sites/Admin/Dashboard.razor
+++ b/ProfileMatch.Sites/Admin/Dashboard.razor
@@ -5,8 +5,11 @@
     <MudTabPanel Text="Users">
         <PeopleList />
     </MudTabPanel>
+    <MudTabPanel Text="Departments">
+        <DepartmentList />
+    </MudTabPanel>
     <MudTabPanel Text="Statistics" Icon="@Icons.Material.Filled.Portrait">
     </MudTabPanel>
-    <MudTabPanel Text="Questions"><QuestionsList/></MudTabPanel>
+    <MudTabPanel Text="Questions"><QuestionsList /></MudTabPanel>
     <MudTabPanel Text="Categories"></MudTabPanel>
 </MudTabs>
