--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -1,6 +1,12 @@
 ﻿
 
-<MudDialogProvider />
+<MudDialogProvider FullWidth="true" 
+                   
+                   CloseButton="true"
+                   DisableBackdropClick="true" 
+                   NoHeader="false"
+                   Position="DialogPosition.Center"
+/>
 <MudSnackbarProvider />
 <MudThemeProvider Theme="currentTheme" />
 <MudLayout>
@@ -47,5 +53,5 @@
 </MudLayout>
 
 @code{
-   
+
 }
