--- a/ProfileMatch.Web/Pages/_Host.cshtml
+++ b/ProfileMatch.Web/Pages/_Host.cshtml
@@ -3,6 +3,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
+    Response.Headers["Cache-Control"] = "no-store";
 }
 
 <!DOCTYPE html>
@@ -13,7 +14,6 @@
     <title>ProfileMatch</title>
     <base href="~/" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="ProfileMatch.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
