--- a/ProfileMatch.Components/Admin/QuestionsList.razor
+++ b/ProfileMatch.Components/Admin/QuestionsList.razor
@@ -11,7 +11,6 @@ else
             <MudSelectItem T="string" Value="@cat.Name" />
         }
     </MudSelect>
-    <MudButton Link="/admin/editcategory" Class="pa-2 mx-2" Variant="Variant.Filled" Color="Color.Primary">Add New</MudButton>
     <MudItem xs="12" md="6">
         <MudText Typo="Typo.body2">SelectedValues:  @(string.Join(", ", Options.Select(x=>$"\"{x}\""))) </MudText>
     </MudItem>
@@ -29,7 +28,7 @@ else
         <RowTemplate>
             <MudTd DataLabel="Category">@context.Category.Name</MudTd>
             <MudTd DataLabel="Question">@context.Name</MudTd>
-            <MudTd DataLabel="Options">
+            <MudTd DataLabel="Actions">
                 <MudButton>Display</MudButton>
                 <MudButton>Edit</MudButton>
             </MudTd>
