question details update

--- a/ProfileMatch.Components/Admin/QuestionDetails.razor
+++ b/ProfileMatch.Components/Admin/QuestionDetails.razor
@@ -1,39 +1,42 @@
 ﻿<MudDialog>
     <DialogContent>
-            <MudCard>
-                <MudCardContent>
-                    <MudItem Class="pt-8"></MudItem>
-                    <MudText Typo="Typo.h6">@Q.Name</MudText>
-                    @if (Q.AnswerOptions.Count>0)
-                    {
-                        <MudTabs Outlined="true"
-                                 Position="Position.Top"
-                                 Rounded="true"
-                                 Border="true"
-                                 ApplyEffectsToContainer="true"
-                                 PanelClass="pa-6 d-block">
-                            @foreach (var level in Q.AnswerOptions)
-                            {
-                                <MudTabPanel Text="@level.Level.ToString()">
+        <MudItem Class="pt-8"></MudItem>
+        <MudText Typo="Typo.h6">@Q.Category.Name:</MudText>
+        <MudText Typo="Typo.h6">@Q.Name</MudText>
 
-                                    <MudItem>
-                                        <MudText Typo="Typo.subtitle1">Level @level.Level.ToString()</MudText>
-                                        <MudText Typo="Typo.subtitle2"
-                                                 @bind-Value="@level.Description">@level.Description</MudText>
+        <MudTabs Outlined="true"
+                 Position="Position.Top"
+                 Rounded="true"
+                 Border="true"
+                 ApplyEffectsToContainer="true"
+                 PanelClass="pa-6 d-block">
+            @foreach (var level in Q.AnswerOptions)
+            {
+                <MudTabPanel Text="@level.Level.ToString()">
 
-                                                <MudButton Variant="Variant.Filled" Color="Color.Tertiary" Size="Size.Small" OnClick="@(() => EditLevelDialog(level))">Edit Level</MudButton>
+                    <MudItem>
+                        <MudText Typo="Typo.subtitle1">Level @level.Level.ToString()</MudText>
+                        <MudText Typo="Typo.subtitle2"
+                                 @bind-Value="@level.Description">@level.Description</MudText>
 
-                                            </MudItem>
+                                <MudButton Variant="Variant.Filled" Color="Color.Tertiary" Size="Size.Small" OnClick="@(() => EditLevelDialog(level))">Edit Level</MudButton>
 
-                                        </MudTabPanel>
-                                    }
-                        </MudTabs>
+                            </MudItem>
+
+                        </MudTabPanel>
                     }
-                    else
-                    {
-                        <MudButton OnClick="@(()=>AddLevels(Q))">Add Answer Options</MudButton>
-                    }
-                </MudCardContent>
-            </MudCard>
+        </MudTabs>
+
     </DialogContent>
 </MudDialog>
+
+<style>
+    .mud-tab {
+        min-width: 50px !important;
+        /*        border-bottom-style: none;*/
+    }
+    /*.mud-tab.mud-tab-active {
+            border-bottom-style: solid;
+            border-color: rgba(255,255,255, 0.70);
+        }*/
+</style>
