--- a/ProfileMatch.Components/Layout/NavMenu.razor
+++ b/ProfileMatch.Components/Layout/NavMenu.razor
@@ -1,19 +1,8 @@
 ﻿<UserCard Style="background-color: var(--mud-palette-drawer-background);color: var(--mud-palette-drawer-text);" />
 <MudDivider Class="mb-4" />
 <MudNavMenu>
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Personal</MudText>
-    <MudNavLink Href="personal/account" Icon="@Icons.Material.Outlined.Person">My Account</MudNavLink>
-    <MudNavLink Href="personal/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
-    <MudNavLink Href="personal/surveys" Icon="@Icons.Filled.FactCheck">Surveys</MudNavLink>
-
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Management</MudText>
-    <MudNavLink Href="manager/dashboard" Icon="@Icons.Filled.List">Manager Dashboard</MudNavLink>
-    <MudNavLink Href="manager/projects" Icon="@Icons.Filled.Business">Projects</MudNavLink>
-    <MudNavLink Href="manager/compare" Icon="@Icons.Filled.BarChart">Compare</MudNavLink>
-
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Administration</MudText>
-    <MudNavLink Href="admin/dashboard" Icon="@Icons.Filled.List">Admin Dashboard</MudNavLink>
-    <MudNavLink Href="admin/surveymanager" Icon="@Icons.Filled.Category">Admin Survey</MudNavLink>
-    <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">SU</MudText>
-    <MudNavLink Href="su/dashboard" Icon="@Icons.Filled.Dangerous">Red Zone</MudNavLink>
+    <MudNavLink Href="user/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="manager/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Manager</MudNavLink>
+    <MudNavLink Href="admin/dashboard" Icon="@Icons.Material.Outlined.Dashboard">Administration</MudNavLink>
+    <MudNavLink Href="su/dashboard" Icon="@Icons.Filled.Dangerous">Super User</MudNavLink>
 </MudNavMenu>
