--- a/ProfileMatch.Sites/User/UserDashboard.razor
+++ b/ProfileMatch.Sites/User/UserDashboard.razor
@@ -1,1 +1,7 @@
-﻿@page "/userdashboard"
+﻿@page "/user/dashboard"
+
+<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">User Dashboard</MudText>
+<MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+    <MudTabPanel Text="Surveys" Icon="@Icons.Filled.FactCheck"><EditUserAnswer /></MudTabPanel>
+    <MudTabPanel Text="Account" Icon="@Icons.Filled.PersonOutline"></MudTabPanel>
+</MudTabs>
