--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -16,6 +16,7 @@
 @using ProfileMatch.Components.Layout
 @using ProfileMatch.Components.Theme
 @using ProfileMatch.Components.Admin
+@using ProfileMatch.Components.User
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
