--- a/ProfileMatch.Components/User/EditUserAnswer.razor
+++ b/ProfileMatch.Components/User/EditUserAnswer.razor
@@ -1,5 +1,60 @@
-﻿<h3>EditUserAnswer</h3>
-
-@code {
-
+﻿@if (loading)
+{
+    <MudProgressCircular Color="Color.Default" Indeterminate="true" />
 }
+else
+{
+
+    <MudSelect T="string" Label="Select Category" MultiSelection="true" @bind-SelectedValues="Options">
+        @foreach (var cat in categories)
+        {
+            <MudSelectItem T="string" Value="@cat.Name" />
+        }
+    </MudSelect>
+    <MudItem xs="12" md="6">
+        <MudText Typo="Typo.body2">SelectedValues:  @(string.Join(", ", Options.Select(x=>$"\"{x}\""))) </MudText>
+    </MudItem>
+    <MudTable Items="@(GetQuestions())" SortLabel="Sort By" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Breakpoint="Breakpoint.Sm" Filter="new Func<Question,bool>(FilterFunc1)">
+        <ColGroup>
+            <col />
+            <col style="width: 60%;" />
+            <col />
+            <col />
+        </ColGroup>
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Questions Table</MudText>
+            <MudSpacer />
+            <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        </ToolBarContent>
+        <HeaderContent>
+            <MudTh><MudTableSortLabel SortBy="new Func<Question, object>(x=>x.Category.Name)">Category</MudTableSortLabel></MudTh>
+            <MudTh><MudTableSortLabel SortBy="new Func<Question, object>(x=>x.Name)">Question</MudTableSortLabel></MudTh>
+            <MudTh>Level</MudTh>
+            <MudTh>Actions</MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd DataLabel="Category">@context.Category.Name</MudTd>
+            <MudTd DataLabel="Question">@context.Name</MudTd>
+            <MudTd DataLabel="Level">5</MudTd>
+            <MudTd DataLabel="Actions">
+                <MudButton OnClick="@(()=>QuestionDetailsDialog(context))">Edit</MudButton>
+            </MudTd>
+        </RowTemplate>
+        <PagerContent>
+            <MudTablePager HidePagination="true" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
+                           PageSizeOptions="new int[] { 5, 10, 25, 50, 100 }" RowsPerPageString="My Row My Table"
+                           InfoFormat="{first_item}-{last_item} / {all_items}" />
+        </PagerContent>
+    </MudTable>
+
+    <MudItem class="d-flex flex-wrap mt-4">
+        <MudSwitch @bind-Checked="@hover" Color="Color.Primary">Hover</MudSwitch>
+        <MudSwitch @bind-Checked="@dense" Color="Color.Secondary">Dense</MudSwitch>
+        <MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">Striped</MudSwitch>
+        <MudSwitch @bind-Checked="@bordered" Color="Color.Warning">Bordered</MudSwitch>
+    </MudItem>
+}
+<style>
+    .mud-tabs-panels {min-height:200px!important;
+    }
+</style>
