--- a/ProfileMatch.Sites/Manager/ManagerDashboard.razor
+++ b/ProfileMatch.Sites/Manager/ManagerDashboard.razor
@@ -1,1 +1,6 @@
 ﻿@page "/manager/dashboard"
+<MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Manager Dashboard</MudText>
+<MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
+    <MudTabPanel Text="Projects"></MudTabPanel>
+    <MudTabPanel Text="Compare"></MudTabPanel>
+</MudTabs>
