added isactive condition for question

--- a/ProfileMatch.Sites/_Imports.razor
+++ b/ProfileMatch.Sites/_Imports.razor
@@ -17,6 +17,7 @@
 @using ProfileMatch.Components.Theme
 @using ProfileMatch.Components.Admin
 @using ProfileMatch.Components.User
+@using ProfileMatch.Components.Manager
 
 @using ProfileMatch.Services
 @using ProfileMatch.Contracts
