added filter - display only active questions for user

--- a/ProfileMatch.Components/User/EditUserAnswer.razor
+++ b/ProfileMatch.Components/User/EditUserAnswer.razor
@@ -37,7 +37,7 @@ else
             <MudTd DataLabel="Question">@context.Name</MudTd>
             <MudTd DataLabel="Level">5</MudTd>
             <MudTd DataLabel="Actions">
-                <MudButton OnClick="@(()=>QuestionDetailsDialog(context))">Edit</MudButton>
+                <MudButton OnClick="@(()=>QuestionDetailsDialog(context))">Edit Answer</MudButton>
             </MudTd>
         </RowTemplate>
         <PagerContent>
