--- a/ProfileMatch.Components/Dialogs/UserQuestionDetails.razor
+++ b/ProfileMatch.Components/Dialogs/UserQuestionDetails.razor
@@ -18,11 +18,10 @@
                         <MudText Typo="Typo.subtitle1">Level @answerOption.Level.ToString()</MudText>
                         <MudText Typo="Typo.subtitle2"
                                  @bind-Value="@answerOption.Description">@answerOption.Description</MudText>
-                        @if (CanSelect(UserId, answerOption.Id).Result)
+                        @if (CanSelect(UserId, answerOption.Id))
                         {
                                 <MudButton Variant="Variant.Filled" OnClick="@(()=>SelectLevelAsync(UserId, answerOption.Id))" Color="Color.Tertiary" Size="Size.Small">This is my Level</MudButton>
                         }
-
                             </MudItem>
 
                         </MudTabPanel>
