added QuestionId foreign key to UserAnswer - this will simplify DB queries

--- a/ProfileMatch.Components/Dialogs/UserQuestionDetails.razor
+++ b/ProfileMatch.Components/Dialogs/UserQuestionDetails.razor
@@ -18,7 +18,7 @@
                         <MudText Typo="Typo.subtitle1">Level @answerOption.Level.ToString()</MudText>
                         <MudText Typo="Typo.subtitle2"
                                  @bind-Value="@answerOption.Description">@answerOption.Description</MudText>
-                        @if (CanSelect(UserId, answerOption.Id))
+                        @if (CanSelect(answerOption))
                         {
                                 <MudButton Variant="Variant.Filled" OnClick="@(()=>SelectLevelAsync(UserId, answerOption.Id))" Color="Color.Tertiary" Size="Size.Small">This is my Level</MudButton>
                         }
