user answer list update

--- a/ProfileMatch.Components/Dialogs/AdminQuestionDetails.razor
+++ b/ProfileMatch.Components/Dialogs/AdminQuestionDetails.razor
@@ -26,7 +26,10 @@
                         </MudTabPanel>
                     }
         </MudTabs>
-
+        @if (CanActivate(Q))
+        {
+            <MudCheckBox @bind-Checked="Q.IsActive" @onclick="@(()=>IsActive())">Activate question</MudCheckBox>
+        }
     </DialogContent>
 </MudDialog>
 
