User can update answers

--- a/ProfileMatch.Components/User/UserQuestionList.razor
+++ b/ProfileMatch.Components/User/UserQuestionList.razor
@@ -35,9 +35,9 @@ else
         <RowTemplate>
             <MudTd DataLabel="Category">@context.Category.Name</MudTd>
             <MudTd DataLabel="Question">@context.Name</MudTd>
-            <MudTd DataLabel="Level">@ShowLevel(context)</MudTd>
+            <MudTd DataLabel="Level">@(ShowLevel(context))</MudTd>
             <MudTd DataLabel="Actions">
-                <MudButton OnClick="@(()=>QuestionDetailsDialog(context))">Edit Answer</MudButton>
+                <MudButton OnClick="@(()=>UserAnswerDialog(context))">Edit Answer</MudButton>
             </MudTd>
         </RowTemplate>
         <PagerContent>
