--- a/ProfileMatch.Web/App.razor
+++ b/ProfileMatch.Web/App.razor
@@ -1,5 +1,5 @@
 <CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" AdditionalAssemblies="new[] { typeof(ProfileMatch.Sites.Admin.Dashboard).Assembly }">
+    <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true" AdditionalAssemblies="new[] { typeof(ProfileMatch.Sites.Admin.AdminDashboard).Assembly }">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(ProfileMatch.Components.Layout.MainLayout)" />
         </Found>
