--- a/ProfileMatch.Components/_Imports.razor
+++ b/ProfileMatch.Components/_Imports.razor
@@ -20,3 +20,4 @@
 @using Microsoft.Extensions.Localization
 @using ProfileMatch.Models.Enumerations
 @using Microsoft.AspNetCore.Identity
+@using ProfileMatch.Models.ViewModels
