--- a/ProfileMatch.Components/Manager/ManagerQuestionList.razor
+++ b/ProfileMatch.Components/Manager/ManagerQuestionList.razor
@@ -16,51 +16,79 @@ else
     <MudSelect T="string" Label="Select Questions" MultiSelection="true" @bind-SelectedValues="Quests">
         @foreach (var q in questions1)
         {
-            <MudSelectItem T="string" Value="@q.Name" />
+            <MudSelectItem T="string" Value="@q.QuestionName" />
         }
     </MudSelect>
     <MudText Typo="Typo.body2">Selected Categories:  @(string.Join(", ", Cats.Select(x=>$"\"{x}\""))) </MudText>
 </MudItem>
-    <MudTable Items="@(GetQuestions())" SortLabel="Sort By" Dense="@dense" Hover="@hover" Bordered="@bordered" Striped="@striped" Breakpoint="Breakpoint.Sm" Filter="new Func<Question,bool>(FilterFunc1)" @bind-SelectedItem="selectedItem1">
-        <ColGroup>
-            <col />
-            <col style="width: 60%;" />
-            <col />
-        </ColGroup>
-        <ToolBarContent>
-            <MudText Typo="Typo.h6">Questions Table</MudText>
-            <MudSpacer />
-            <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-        </ToolBarContent>
-        <HeaderContent>
-            <MudTh><MudTableSortLabel SortBy="new Func<Question, object>(x=>x.Category.Name)">Category</MudTableSortLabel></MudTh>
-            <MudTh><MudTableSortLabel SortBy="new Func<Question, object>(x=>x.Name)">Question</MudTableSortLabel></MudTh>
-            <MudTh>Cats</MudTh>
-        </HeaderContent>
-        <RowTemplate>
-            <MudTd DataLabel="Category">@context.Category.Name</MudTd>
-            <MudTd DataLabel="Question">@context.Name</MudTd>
-            <MudTd DataLabel="Actions">
-                <MudButton OnClick="@(()=>QuestionDisplay(context))">Display</MudButton>
-                <MudButton OnClick="@(()=>QuestionDialog(context))">Edit</MudButton>
-            </MudTd>
-        </RowTemplate>
-        <PagerContent>
-            <MudTablePager HidePagination="true" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
-                           PageSizeOptions="new int[] { 5, 10, 25, 50, 100 }" RowsPerPageString="My Row My Table"
-                           InfoFormat="{first_item}-{last_item} / {all_items}" />
-        </PagerContent>
-    </MudTable>
+<MudItem xs="12" md="6">
+    <MudSelect T="string" Label="Select Users" MultiSelection="true" @bind-SelectedValues="Ppl">
+        @foreach (var u in users)
+        {
+            <MudSelectItem T="string" Value="@u.FullName" />
+        }
+    </MudSelect>
+</MudItem>
+<MudTable GroupHeaderStyle="background-color:var(--mud-palette-background-grey)"
+          Height="500px" 
+          FixedHeader="true"
+          GroupFooterClass="mb-4"
+          GroupBy="@_groupDefinition"
+          Items="@(GetQuestions())" 
+          SortLabel="Sort By" 
+          Dense="@dense" Hover="@hover" 
+          Bordered="@bordered"
+          Striped="@striped" 
+          Breakpoint="Breakpoint.Sm" 
+          Filter="new Func<QuestionUserLevelVM,bool>(FilterFunc1)"
+          @bind-SelectedItem="selectedItem1">
+    <ColGroup>
+        <col style="width: 60%;" />
+        <col />
+        <col />
+        <col />
+        <col />
+        <col />
+    </ColGroup>
+    <ToolBarContent>
+        <MudText Typo="Typo.h6">Questions Table</MudText>
+        <MudSpacer />
+        <MudTextField @bind-Value="searchString1" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+    </ToolBarContent>
+    <HeaderContent>
+        <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.QuestionName)">Question</MudTableSortLabel></MudTh>
+        <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.Level)">Level</MudTableSortLabel></MudTh>
+        <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.LastName)">Last Name</MudTableSortLabel></MudTh>
+        <MudTh><MudTableSortLabel SortBy="new Func<QuestionUserLevelVM, object>(x=>x.FirstName)">First Name</MudTableSortLabel></MudTh>
+        <MudTh>Actions</MudTh>
+    </HeaderContent>
+    <GroupHeaderTemplate>
+        <MudTh Class="mud-table-cell-custom-group" colspan="5">@($"{context.GroupName}: {context.Key}")</MudTh>
+    </GroupHeaderTemplate>
+    <RowTemplate>
+        <MudTd DataLabel="Question">@context.QuestionName</MudTd>
+        <MudTd DataLabel="Level">@context.Level</MudTd>
+        <MudTd DataLabel="Last Name">@context.LastName</MudTd>
+        <MudTd DataLabel="First Name">@context.FirstName</MudTd>
+        <MudTd DataLabel="Actions">
+            <MudButton OnClick="@(()=>QuestionDisplay(context.QuestionId))">Display</MudButton>
+        </MudTd>
+    </RowTemplate>
+    <GroupFooterTemplate>
+        <MudTh Class="mud-table-cell-custom-group mud-table-cell-custom-group-footer" colspan="5">Hello from footer</MudTh>
+    </GroupFooterTemplate>
+    <PagerContent>
+        <MudTablePager HidePagination="true" HorizontalAlignment="HorizontalAlignment.Right" Class="pl-2 pr-2"
+                       PageSizeOptions="new int[] { 5, 10, 25, 50, 100 }" RowsPerPageString="My Row My Table"
+                       InfoFormat="{first_item}-{last_item} / {all_items}" />
+    </PagerContent>
+</MudTable>
 
     <MudItem class="d-flex flex-wrap mt-4">
         <MudSwitch @bind-Checked="@hover" Color="Color.Primary">Hover</MudSwitch>
         <MudSwitch @bind-Checked="@dense" Color="Color.Secondary">Dense</MudSwitch>
         <MudSwitch @bind-Checked="@striped" Color="Color.Tertiary">Striped</MudSwitch>
         <MudSwitch @bind-Checked="@bordered" Color="Color.Warning">Bordered</MudSwitch>
-        <MudSpacer />
-        <MudItem style="min-width:200px;">
-            <MudText Inline="true" Class="align-self-center">Selected1: @selectedItem1?.Name</MudText>
-        </MudItem>
     </MudItem>
 }
 <style>
