--- a/ProfileMatch.Sites/Manager/ManagerDashboard.razor
+++ b/ProfileMatch.Sites/Manager/ManagerDashboard.razor
@@ -2,5 +2,6 @@
 <MudText Typo="Typo.h5" Color="Color.Primary" Class="mb-4">Manager Dashboard</MudText>
 <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6">
     <MudTabPanel Text="Projects"></MudTabPanel>
-    <MudTabPanel Text="Compare"><ManagerQuestionList/></MudTabPanel>
+    <MudTabPanel Text="Compare"><ManagerQuestionList /></MudTabPanel>
+    <MudTabPanel Text="Test"><ManagerTestTable /></MudTabPanel>
 </MudTabs>
