--- a/ProfileMatch.Components/Manager/ManagerQuestionList.razor
+++ b/ProfileMatch.Components/Manager/ManagerQuestionList.razor
@@ -14,9 +14,9 @@ else
         }
     </MudSelect>
     <MudSelect T="string" Label="Select Questions" MultiSelection="true" @bind-SelectedValues="Quests">
-        @foreach (var q in questions1)
+        @foreach (var q in questions2Filtered)
         {
-            <MudSelectItem T="string" Value="@q.QuestionName" />
+            <MudSelectItem T="string" Value="@q.Name" />
         }
     </MudSelect>
     <MudText Typo="Typo.body2">Selected Categories:  @(string.Join(", ", Cats.Select(x=>$"\"{x}\""))) </MudText>
@@ -40,11 +40,10 @@ else
           Bordered="@bordered"
           Striped="@striped" 
           Breakpoint="Breakpoint.Sm" 
-          Filter="new Func<QuestionUserLevelVM,bool>(FilterFunc1)"
-          @bind-SelectedItem="selectedItem1">
+          Filter="new Func<QuestionUserLevelVM,bool>(FilterFunc1)">
     <ColGroup>
-        <col style="width: 60%;" />
         <col />
+        <col style="width: 60%;" />
         <col />
         <col />
         <col />
@@ -71,7 +70,7 @@ else
         <MudTd DataLabel="Last Name">@context.LastName</MudTd>
         <MudTd DataLabel="First Name">@context.FirstName</MudTd>
         <MudTd DataLabel="Actions">
-            <MudButton OnClick="@(()=>QuestionDisplay(context.QuestionId))">Display</MudButton>
+            <MudButton OnClick="@(()=>QuestionDisplay(context.QuestionId))" Color="Color.Info" Variant="Variant.Filled" >Display</MudButton>
         </MudTd>
     </RowTemplate>
     <GroupFooterTemplate>
